--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  pipeline: # This is our stuff
+  pipeline:
     build:
       context: WasteAnnotator
       dockerfile: ./docker/Dockerfile
@@ -8,9 +8,14 @@ services:
     stdin_open: true
     tty: true
     volumes:
+      # Bind the WasteAnnotator folder to the container to allow for live changes in the code
       - type: bind
         source: ./WasteAnnotator
         target: /waste-annotator
+      # Use a shared repository folder to avoid downloading the same data multiple times
+      - type: bind
+        source: ./data
+        target: /waste-annotator/data
     links:
       - 'api:auto-fl'
 
@@ -22,9 +27,18 @@ services:
     stdin_open: true # docker run -i
     tty: true        # docker run -t
     volumes:
+      # Override the configuration of AutoFL
       - type: bind
-        source: ./WasteAnnotator/data/repository
+        source: ./config/main.yaml
+        target: /autofl/config/main.yaml
+      # Use a shared repository folder to avoid downloading the same data multiple times
+      - type: bind
+        source: ./data/repository
         target: /autofl/data/repository
+      # Bind the models folder of the container
+      - type: bind
+        source: ./data/models/
+        target: /autofl/data/models/
 
 
   # Separate database for storing component labelling.
@@ -44,7 +58,7 @@ services:
   #    ports:
   #        - "4432:5432"
   #    volumes:
-  #      - ./pipelinedb:/var/lib/postgresql/data
+  #      - ./database/pipelinedb:/var/lib/postgresql/data
   #      - ./WasteAnnotator/docker/sql:/docker-entrypoint-initdb.d/
 
   db:
@@ -62,21 +76,11 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./auto_fl_db:/var/lib/postgresql/data
-      - ./AutoFL/docker/sql:/docker-entrypoint-initdb.d/
+      - ./database/auto_fl_db:/var/lib/postgresql/data
+      - ./sql:/docker-entrypoint-initdb.d/ # Folder containing the SQL scripts to be executed on the database creation (copied from AutoFL repo)
 
   adminer:
     image: adminer
     restart: always
     ports:
       - "8080:8080"
-
-# ui service not necessarily needed
-#  ui:
-#    image: cezarsas/autofl-ui:latest
-#    ports:
-#      - "8501:8501"
-#    stdin_open: true # docker run -i
-#    tty: true        # docker run -t
-#    links:
-#      - 'api:auto-fl'
