--- a/WasteAnnotator/docker/Dockerfile
+++ b/WasteAnnotator/docker/Dockerfile
@@ -37,7 +37,7 @@ COPY . .
 
 EXPOSE 8669
 HEALTHCHECK CMD curl --fail http://localhost:8669/_stcore/health
-
+ENV HYDRA_FULL_ERROR=1
 # Specify the command to run on container start
 CMD ["python", "src/main.py"]
 # CMD ["python", "-m", "unittest", "discover", "test"]
