--- a/WasteAnnotator/pyproject.toml
+++ b/WasteAnnotator/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "componentannotator"
+name = "WasteAnnotator"
 version = "0.4.0"
 description = ""
 authors = ["Cezar Sas", "Matthijs", "Andro"]
@@ -21,14 +21,15 @@ more-itertools = "^10.1.0"
 sqlalchemy = "^2.0.21"
 psycopg = {extras = ["binary"], version = "^3.1.14"}
 streamlit = "^1.29.0"
-streamlit-extras = "^0.3.5"
+streamlit-extras = "^0.4.7"
 scipy = "^1.11.4"
-cdlib = "^0.2.0"
-infomap = "^2.7.1"
+cdlib = "^0.4.0"
 wurlitzer = "^3.0.3"
-psycopg2 = "^2.9.9"
 beautifulsoup4 = "^4.12.3"
 selenium = "^4.16.0"
+hydra-core = "^1.3.2"
+bayanpy = "^0.7.7"
+graph-tools = "^1.14"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "^1.5.3"
@@ -38,7 +39,6 @@ mkdocstrings-python = "^1.7.5"
 mkdocs-literate-nav = "^0.6.1"
 mkdocs-section-index = "^0.3.8"
 mkdocs-material = "^9.4.14"
-
 
 [build-system]
 requires = ["poetry-core"]
