--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,8 @@ services:
 
 
   auto-fl:
-    image: cezarsas/autofl:latest
+    image: cezarsas/autofl
     ports:
-      - "8888:8888"
       - "8000:8000"
     stdin_open: true # docker run -i
     tty: true        # docker run -t
@@ -38,27 +37,6 @@ services:
       - type: bind
         source: ./data/models/
         target: /autofl/data/models/
-
-
-  # Separate database for storing component labelling.
-  # Optional, not necessarily needed. We opt to use JSON files instead.
-  #  db_pipeline:
-  #    image: postgres:16.4-bullseye
-  #    restart: always
-  #    environment:
-  #      POSTGRES_DB: "pipeline"
-  #      POSTGRES_USER: "pipeline_user"
-  #      POSTGRES_PASSWORD: "pipeline_pw"
-  #    healthcheck:
-  #      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}" ]
-  #      interval: 1s
-  #      timeout: 5s
-  #      retries: 10
-  #    ports:
-  #        - "4432:5432"
-  #    volumes:
-  #      - ./database/pipelinedb:/var/lib/postgresql/data
-  #      - ./WasteAnnotator/docker/sql:/docker-entrypoint-initdb.d/
 
   db:
     image: postgres
