--- a/WasteAnnotator/docker/Dockerfile
+++ b/WasteAnnotator/docker/Dockerfile
@@ -38,6 +38,7 @@ COPY . .
 EXPOSE 8669
 HEALTHCHECK CMD curl --fail http://localhost:8669/_stcore/health
 ENV HYDRA_FULL_ERROR=1
+RUN mkdir "/opt/gurobi/"
 # Specify the command to run on container start
 CMD ["python", "src/main.py"]
 # CMD ["python", "-m", "unittest", "discover", "test"]
