--- a/WasteAnnotator/pyproject.toml
+++ b/WasteAnnotator/pyproject.toml
@@ -30,6 +30,8 @@ selenium = "^4.16.0"
 hydra-core = "^1.3.2"
 bayanpy = "^0.7.7"
 graph-tools = "^1.14"
+leidenalg = "^0.10.2"
+igraph = "^0.11.6"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "^1.5.3"
