--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-numpy = "^2.1.2"
 fastapi = "^0.115.2"
 gunicorn = "^23.0.0"
 uvicorn = "^0.31.1"
@@ -30,6 +29,13 @@ hydra-core = "^1.3.2"
 bayanpy = "^0.7.7"
 cdlib = "^0.4.0"
 networkit = "^11.0"
+langchain = "^0.3.3"
+langchain-community = "^0.3.2"
+openai = "^1.51.2"
+langchain-openai = "^0.2.2"
+leidenalg = "^0.10.2"
+igraph = "^0.11.6"
+
 
 [build-system]
 requires = ["poetry-core"]
